--- a/src/components/weeklymealplan/weeklymealplan.component.html
+++ b/src/components/weeklymealplan/weeklymealplan.component.html
@@ -1,1 +1,67 @@
-<div>Hello</div>
+<div class="main-container" (swipeleft)="week_move_click(7)" (swiperight)="week_move_click(-7)">
+    <mwl-calendar-week-view
+        [weekStartsOn]="1"
+        [headerTemplate]="headerTemplate"
+        [viewDate]="viewDate"
+        [refresh]="calendar_refresher"
+    >
+    </mwl-calendar-week-view>
+</div>
+
+
+<ng-template #headerTemplate let-days="days" let-locale="locale">
+    <table mat-table [dataSource]="days" class="mat-elevation-z8">
+    <!--- Note that these columns can be defined in any order.
+            The actual rendered columns are set as a property on the row definition" -->
+    
+    <ng-container matColumnDef="grouped">
+        <th mat-header-cell *matHeaderCellDef colspan="2">
+            <div class="week-number">
+                <mat-icon (click)="week_move_click(-7)" class="week-seek-button">chevron_left</mat-icon>
+                Calendar Week<br>{{week_number}}
+                <mat-icon (click)="week_move_click(7)" class="week-seek-button">chevron_right</mat-icon>
+            </div>
+        </th>
+    </ng-container>
+
+    <!-- Day Column -->
+    <ng-container matColumnDef="date">
+        <th mat-header-cell *matHeaderCellDef>
+            Date
+        </th>
+        <td mat-cell *matCellDef="let day">
+            {{day.date | calendarDate:'weekViewColumnHeader':locale}}
+            <br>
+            {{day.date | date}}
+        </td>
+    </ng-container>
+    
+    <!-- Meal Column -->
+    <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>
+            Meal
+        </th>
+        <td mat-cell *matCellDef="let meal">
+            @let meal_plan = (meal_plans | filterByImpure: ['date']: meal.date.toDateString())[0];
+             <ng-container *ngIf="meal_plan != undefined">
+                <div style="display: flex; align-items: center; justify-content: space-between; height: 56px;">
+                    <p class="meal-text">{{meal_plan.name}}</p>
+                    <button class="delete-button" mat-icon-button (click)="delete_meal_plan(meal_plan)">
+                        <mat-icon>delete</mat-icon>
+                    </button>
+                </div>
+            </ng-container>
+            <ng-container *ngIf="meal_plan == undefined">
+                <mat-form-field subscriptSizing="dynamic">
+                    <mat-label>Meal</mat-label>
+                    <input matInput autocapitalize="none" enterkeyhint="enter" name="meal_input" type="text" (keyup.enter)="add_meal_plan(meal)" [(ngModel)]="new_meal_strings[meal.day]">
+                </mat-form-field>
+            </ng-container>
+        </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="groupedColumns; sticky: true"></tr>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+</ng-template>
