--- a/src/app/homescreen/homescreen.component.css
+++ b/src/app/homescreen/homescreen.component.css
@@ -37,12 +37,9 @@ mat-list {
 app-shoppinglist
 {
     min-height: fit-content;
-    padding-top: 40px;
-    padding-bottom: 40px;
-    padding-left: 20px;
-    padding-right: 20px;
-    width: 80%;
-    min-width: 200px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 app-eventcalendar{
