--- a/src/components/weeklymealplan/weeklymealplan.component.html
+++ b/src/components/weeklymealplan/weeklymealplan.component.html
@@ -42,10 +42,10 @@
             Meal
         </th>
         <td mat-cell *matCellDef="let meal">
-            @let meal_plan = (meal_plans | filterByImpure: ['date']: meal.date.toDateString())[0];
+            @let meal_plan = (meal_plans | filterByImpure: ['mealDate']: meal.date.toDateString())[0];
              <ng-container *ngIf="meal_plan != undefined">
                 <div style="display: flex; align-items: center; justify-content: space-between; height: 56px;">
-                    <p class="meal-text">{{meal_plan.name}}</p>
+                    <p class="meal-text">{{meal_plan.label}}</p>
                     <button class="delete-button" mat-icon-button (click)="delete_meal_plan(meal_plan)">
                         <mat-icon>delete</mat-icon>
                     </button>
